# axum_api

./: Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
examples/: quick_dev.rs
sql/dev-initial/: 01-create-schema.sql  02-dev-seed.sql
src/: config.rs  error.rs  main.rs
src/context/: mod.rs
src/log/: mod.rs
src/model/: mod.rs
src/utils/: mod.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
static/: index.html
tests/: quick_dev.rs
