[package]
name = "axum-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4.0"
axum-macros = "0.3.8"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tower-cookies = "0.9.0"
lazy-regex = "3.1.0"
strum_macros = "0.25.3"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]


[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.7"
